tests/errors/semantic/blocking/REAL_TYPE.py
# Unrecognised datatype <class 'pyccel.ast.numpyext.NumpyReal'>
# pylint: disable=missing-function-docstring, missing-module-docstring

def f(a : 'real'):
    pass
